# Raven-Club

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
config/settings/: base.py  logging_config.py  unfold.py
enums/: enums.py
src/authentication/: forms.py  urls.py  views.py
src/authentication/templates/authentication/: register.html
src/authentication/templates/registration/: login1.html
src/core/: apps.py  views.py
src/core/services/: services.py  signal.py
src/leaderboard/: urls.py  views.py
src/leaderboard/templates/leaderboard/: league_list.html  league_standings.html
src/leagues/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/leagues/migrations/: 0001_initial.py  0002_rename_league_id_leaguemember_league_and_more.py  0003_league_teams.py
src/leagues/templates/leagues/: create_prediction.html  leagues_detail.html  (+2 more)
src/results/: admin.py  apps.py  models.py
src/results/migrations/: 0001_initial.py  0002_prediction.py  0003_matchresult_away_pen_and_more.py
src/tournaments/: admin.py  apps.py  models.py  urls.py  views.py
src/tournaments/migrations/: 0001_initial.py  0002_alter_round_unique_together.py  0003_team_alter_match_options_remove_match_away_logo_and_more.py
src/users/: admin.py  forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
static/CSS/: style_css.css
static/JS/: match_result.js
templates/base/: index.html
templates/include/: header.html  sidebar.html
templates/registration/: login.html
(+4 files in other folders)
