[tool.poetry]
package-mode = false

[project]
name = "raven_club"
version = "0.0.1"
description = ""
authors = [
    {name = "Dmitriy", email = "ViatkinDima@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"