[tool.poetry]
package-mode = false

[project]
name = "raven_club"
version = "0.0.1"
description = ""
authors = [
    {name = "Dmitriy", email = "ViatkinDima@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django-unfold (>=0.99.0,<0.100.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"